Updated DWR integration, now accepts multiple facilityIds in request
